--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,33 +1,55 @@
-<div id="home">
-  <div class="container">
-    <div class="row">
-      <div class="col-8 offset-2">
-        <h1>{{msg}}</h1>
-        <h2>This is our Home Page!</h2>
-        <form class="clearfix mb-4" action="POST">
-          <div class="form-group">
-            <label for="example-text">Example Text</label>
-            <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
-          </div>
-          <div class="form-group">
-            <label for="example-description">Example Description</label>
-            <textarea class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Example Description"></textarea>
-          </div>
-          <button id="submit" class="btn btn-primary float-right">Submit</button>
-        </form>
-        <h3>Examples:</h3>
-        <ul id="example-list" class="list-group">
-          {{#each examples}}
-          <li data-id="{{this.id}}" class="list-group-item">
-            <a href="example/{{this.id}}">{{this.text}}</a>
-            <button class="btn btn-danger float-right delete">ｘ</button>
-          </li>
-          {{/each}}
-        </ul>
-      </div>
-    </div>
+<div class="container">
+	<div class="row">
+		<div class="col-md-8 text-center" id="top-bar">
+			<img class="mainpic" id="mainpic" src=""/>
+			<div class="textDecor">
+			<h1 class="pageTitle">Tome of Legends</h1>
+			</div>
+		</div>
+		<div class="col-md-4 text-center" id="login">
+			<div>Login to save deck</div> {{!Placeholder}}
+		</div>
   </div>
+
+  <div class"row">
+		<div class="col-md-8 text-center search_cards">
+			<form action="" method="GET">
+				<input type="text" class="form-control cardSearch" name="card_search" placeholder="Type the name of a card..." id="search_cards">
+				<button type="submit" class="btn btn-default searchButton">Search</button>
+			</form>
+		</div>
+  </div>
+
+  <div class="row">
+		<div class="col-md-9 text-center" class="task">
+            <h4 class="sectionTitle">Available Cards</h4>
+			<div class="row">
+			  {{#each card_data}}
+				<div class="col-md-9 text-center availableCards">
+					<div class="floater">
+					<div class="card">{{this.card_img}} {{!Will update names, etc. Placeholders for now.}}
+					</div>
+					</div>
+					<div class="text-center">
+					<form class="add-deck button-size">
+						<input input type="hidden" class="card_id" type="text" value={{this.id}}><br>
+						<button type="submit" class="btn btn-default addtoDeck">Add to Deck</button>
+					</form>
+				</div>
+				</div>
+			  {{/each}}
+			</div>
+		</div>
+		<div class="col-md-3 text-center" class="task">
+            <h4 class="sectionTitle">Deck</h4>
+			  {{#each card_data}}
+			  	{{#if this.decked}}
+			  		<pre class="col-md-9 text-center deckedCards"> {{this.card_thumb}} {{this.card_name}}"</pre>
+				{{/if}}
+			  {{/each}}
+		</div>
+	</div>
 </div>
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="/js/index.js"></script>
