--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,55 +1,60 @@
-<div class="container">
-	<div class="row">
-		<div class="col-md-8 text-center" id="top-bar">
-			<img class="mainpic" id="mainpic" src=""/>
-			<div class="textDecor">
-			<h1 class="pageTitle">Tome of Legends</h1>
-			</div>
-		</div>
-		<div class="col-md-4 text-center" id="login">
-			<div>Login to save deck</div> {{!Placeholder}}
-		</div>
-  </div>
+ <div class="container">
+                <div class="row">
+                    <div class="col-md-8 text-center" id="top-bar">
+                        <img class="mainpic" id="mainpic" src=""/>
+                        <div class="textDecor">
+                        <h1 class="pageTitle">Tome of Legends</h1>
+                        </div>
+                    </div>
+                    <div class="col-md-4 text-center" id="login">
+                        <div>Login to save deck</div> <!-- {{!Placeholder}} -->
+                    </div>
+              </div>
+            
+              <div class = "row">
+                    <div class="col-md-8 text-center search_cards">
+                        <form action="" method="GET">
+                            <input type="text" class="form-control cardSearch" name="card_search" placeholder="Type the name of a card..." id="search_cards">
+                            <button type="submit" class="btn btn-default searchButton">Search</button>
+                        </form>
+                    </div>
 
-  <div class"row">
-		<div class="col-md-8 text-center search_cards">
-			<form action="" method="GET">
-				<input type="text" class="form-control cardSearch" name="card_search" placeholder="Type the name of a card..." id="search_cards">
-				<button type="submit" class="btn btn-default searchButton">Search</button>
-			</form>
-		</div>
-  </div>
+                    <div class = "col-md-4 text-center allDecks">
+                        <h4 class="sectionTitle">Your Decks</h4>
+                    </div>
+              </div>
+            
+              <div class="row">
+                    <div class="col-md-9 text-center availableCardsContainer" class="task">
+                        <div class="row">
+                          {{#each card_data}}
+                            <div class="col-md-9 text-center availableCards">
+                                <div class="floater">
+                                <div class="card addDeck" data-id="{{this.id}}">
+						            <img class="cardImg" src="{{this.card_img}}"> {{!Will update names, etc. Placeholders for now.}}
+					            </div>
+                                </div>
+                            </div>
+                          {{/each}}
+                        </div>
+                    </div>
+                    <div class="col-md-2 text-center deckContainer" class="task">
+                        <h4 class="sectionTitle">Deck</h4>
+                          {{#each card_data}}
+                              {{#if this.decked}}
+                                <div class="col-md-9 text-center deckedCards"> 
+                                    <img class="deckThumb" src="{{this.card_thumb}}">
+                                    <p class="deckList">{{this.card_name}}>
+                                    <img class="hoverimage" src="{{this.card_img}}">    
+                                </div>
+                                
 
-  <div class="row">
-		<div class="col-md-9 text-center" class="task">
-            <h4 class="sectionTitle">Available Cards</h4>
-			<div class="row">
-			  {{#each card_data}}
-				<div class="col-md-9 text-center availableCards">
-					<div class="floater">
-					<div class="card">{{this.card_img}} {{!Will update names, etc. Placeholders for now.}}
-					</div>
-					</div>
-					<div class="text-center">
-					<form class="add-deck button-size">
-						<input input type="hidden" class="card_id" type="text" value={{this.id}}><br>
-						<button type="submit" class="btn btn-default addtoDeck">Add to Deck</button>
-					</form>
-				</div>
-				</div>
-			  {{/each}}
-			</div>
-		</div>
-		<div class="col-md-3 text-center" class="task">
-            <h4 class="sectionTitle">Deck</h4>
-			  {{#each card_data}}
-			  	{{#if this.decked}}
-			  		<pre class="col-md-9 text-center deckedCards"> {{this.card_thumb}} {{this.card_name}}"</pre>
-				{{/if}}
-			  {{/each}}
-		</div>
-	</div>
-</div>
+                            {{/if}}
+                          {{/each}}
+                            
+                    </div>
+                </div>
+            </div>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="/js/index.js"></script>
