--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,10 +2,15 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
-  <title>Home Page</title>
+  <title>Tome of Legends</title>
+	<meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <link rel="stylesheet" href="styles/styles.css"/>
+  <link href="https://fonts.googleapis.com/css?family=Baloo|Indie+Flower|Francois+One|Raleway|Molengo|Manjari|Monoton|Righteous|Rubik+Mono+One|Staatliches&display=swap" rel="stylesheet">
+  <link rel="icon" href="">
 </head>
 
 <body>
