--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -93,7 +93,7 @@ body {
     margin-right: 5px;
     margin-bottom: 5px;
     padding: 6px;
-    border-radius: 4px;
+    border-radius: 10px;
     background: #1e31369d!important;
 }
 
@@ -108,7 +108,8 @@ body {
 .deckContainer {
     background: #1e31369d !important;
     padding: 0;
-    border-radius: 4px;
+    padding-top: 2%;
+    border-radius: 10px;
 }
 
 .deckedCards {
