--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,27 +1,28 @@
- <div class="container">
+<div class="container">
                 <div class="row">
                     <div class="col-md-8 text-center" id="top-bar">
                         <img class="mainpic" id="mainpic" src=""/>
                         <div class="textDecor">
                         <h1 class="pageTitle">Tome of Legends</h1>
+                        <h1 class="titleShadow">Tome of Legends</h1>
                         </div>
                     </div>
-                    <div class="col-md-4 text-center" id="login">
-                        <div>Login to save deck</div> <!-- {{!Placeholder}} -->
+                    <div class="col-md-1 text-center" id="login">
+                        <div class="loginButton">Login</div> <!-- {{!Placeholder}} -->
                     </div>
+                    <div class = "col-md-1 text-center allDecks">
+                      <div class="deckButton">Your Decks</div>
+                  </div>
               </div>
             
               <div class = "row">
-                    <div class="col-md-8 text-center search_cards">
+                    <div class="col-md-11 text-center search_cards">
                         <form action="" method="GET">
                             <input type="text" class="form-control cardSearch" name="card_search" placeholder="Type the name of a card..." id="search_cards">
                             <button type="submit" class="btn btn-default searchButton">Search</button>
                         </form>
                     </div>
 
-                    <div class = "col-md-4 text-center allDecks">
-                        <h4 class="sectionTitle">Your Decks</h4>
-                    </div>
               </div>
             
               <div class="row">
