--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -39,7 +39,7 @@
                           {{/each}}
                         </div>
                     </div>
-                    <div class="col-md-2.5 text-center deckContainer" class="task">
+                    <div class="text-center deckContainer" class="task">
                         <h4 class="sectionTitle">Deck</h4>
                           {{#each card_data}}
                               {{#if this.decked}}
