--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -32,7 +32,7 @@
                             <div class="col-md-9 text-center availableCards">
                                 <div class="floater">
                                 <div class="card addDeck" data-id="{{this.id}}">
-						            <img class="cardImg" src="{{this.card_img}}"> {{!Will update names, etc. Placeholders for now.}}
+						            <img class="cardImg" src="{{this.imageURLNormal}}"> {{!Will update names, etc. Placeholders for now.}}
 					            </div>
                                 </div>
                             </div>
