--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -7,6 +7,20 @@
 
 /* CUSTOM FONTS, etc. */
 
+/* RESPONSIVENESS */
+
+@media screen and (max-width: 480px) {
+    #top-bar {
+        margin-bottom: 30%;
+    }
+    .deckContainer {
+        margin-top: 5%;
+        width: 100%;
+    }
+}
+
+/* RESPONSIVENESS */
+
 /* General */
 
 body {
@@ -67,12 +81,6 @@ body {
     left: 0;
 }
 
-@media screen and (max-width: 480px) {
-    #top-bar {
-        margin-bottom: 30%;
-    }
-}
-
 .loginButton {
     float: left;
     display: inline-block;
@@ -123,6 +131,20 @@ body {
 
 /* Searchbar */
 
+.cardSearch {
+    border-radius: 10px;
+    border: solid 1px #00000071;
+    transition: 0.3s;
+}
+
+.cardSearch:hover {
+    box-shadow: 0 0 10px #ff5e008f, 0px 10px 16px -6px black;
+}
+
+.cardSearch:focus {
+    box-shadow: 0 0 7px #f5b400b4;
+}
+
 .search_cards {
     margin: auto;
     background: #1e313656!important;
@@ -132,6 +154,7 @@ body {
     border: 1px solid #77777763;
     padding: 25px;
     border-radius: 10px;
+    transition: 0.3s;
 }
 
 .searchButton {
@@ -243,7 +266,7 @@ body {
 }
 
 .deckedCards {
-    max-width: 100%;
+
     margin: 0;
     display: flex;
     padding-left: 4%;
@@ -261,8 +284,10 @@ body {
     flex: 1;
     z-index: 1;
     color: #0000009d;
-    width: 100%;
     font-size: 16px;
+    width: 200px;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
 }
 
 .deckedCards:hover {
