--- a/test/demo/P2-Index/styles.css
+++ b/test/demo/P2-Index/styles.css
@@ -7,20 +7,6 @@
 
 /* CUSTOM FONTS, etc. */
 
-/* RESPONSIVENESS */
-
-@media screen and (max-width: 480px) {
-    #top-bar {
-        margin-bottom: 30%;
-    }
-    .deckContainer {
-        margin-top: 5%;
-        width: 100%;
-    }
-}
-
-/* RESPONSIVENESS */
-
 /* General */
 
 body {
@@ -195,6 +181,54 @@ body {
     margin: 0;
 }
 
+.filterButtons {
+    background: url("W.png");
+    width: 2em;
+    height: 2em;
+    float: right;
+    margin-top: 1%;
+    margin-left: 2px;
+    margin-right: 2px;
+    border-radius: 20px;
+    filter: saturate(0.5);
+    transition: 0.2s;
+    border: 2px solid #0000008c;
+}
+
+.filterButtons:hover {
+    cursor: pointer;
+    -moz-box-shadow:    0px 14px 16px -6px black;
+    -webkit-box-shadow: 0px 14px 16px -6px black;
+    box-shadow:         inset 0 0 10px #a3a3a342, 0 0 10px #ffffff, 0px 14px 16px -6px black;
+    filter: saturate(2);
+    transform: rotate(5deg);
+}
+
+#green:hover {
+    -moz-box-shadow:    0px 14px 16px -6px black;
+    -webkit-box-shadow: 0px 14px 16px -6px black;
+    box-shadow:         inset 0 0 10px #a3a3a342, 0 0 10px #99ffaa, 0px 14px 16px -6px black;
+}
+
+#blue:hover {
+    -moz-box-shadow:    0px 14px 16px -6px black;
+    -webkit-box-shadow: 0px 14px 16px -6px black;
+    box-shadow:         inset 0 0 10px #a3a3a342, 0 0 10px #00c3ff, 0px 14px 16px -6px black;
+}
+
+#red:hover {
+    -moz-box-shadow:    0px 14px 16px -6px black;
+    -webkit-box-shadow: 0px 14px 16px -6px black;
+    box-shadow:         inset 0 0 10px #a3a3a342, 0 0 10px #ff5e00, 0px 14px 16px -6px black;
+}
+
+#black:hover {
+    -moz-box-shadow:    0px 14px 16px -6px black;
+    -webkit-box-shadow: 0px 14px 16px -6px black;
+    box-shadow:         inset 0 0 10px #a3a3a342, 0 0 10px #000000, 0px 14px 16px -6px black;
+}
+
+
 /* Searchbar */
 
 /* Available Cards */
@@ -349,8 +383,8 @@ body {
 
 .card:hover {
     filter: saturate(1.7);
-    webkit-box-shadow: 0px 8px 6px -6px black;
-    -moz-box-shadow: 0px 8px 6px -6px black;
+    webkit-box-shadow: 0px 18px 16px -6px black;
+    -moz-box-shadow: 0px 18px 16px -6px black;
     box-shadow: 0 0 5px #ffae00ce, 0px 18px 16px -6px black;
     transform: translateY(-10px);
     
@@ -358,3 +392,23 @@ body {
 
 
 /* CARDS */
+
+
+/* RESPONSIVENESS */
+
+@media screen and (max-width: 680px) {
+    #top-bar {
+        margin-bottom: 30%;
+    }
+    .deckContainer {
+        margin-top: 5%;
+        width: 100%;
+    }
+    .filterButtons {
+        width: 1.7em;
+        height: 1.7em;
+        margin-top: 4%;
+    }
+}
+
+/* RESPONSIVENESS */
