--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -19,13 +19,20 @@
                     <div class="col-lg-11 text-center search_cards">
                         <form action="" method="GET">
                             <input type="text" class="form-control cardSearch" name="card_search" placeholder="Type the name of a card..." id="search_cards">
-                            <button type="submit" class="btn btn-default searchButton">Search</button>
+                            <button type="submit" class="btn btn-default searchButton">Clear</button>
+                            <img class="filterButtons" id="white" src="/assets/img/W.PNG">
+                            <img class="filterButtons" id="blue" src="/assets/img/U.PNG">
+                            <img class="filterButtons" id="black" src="/assets/img/B.PNG">
+                            <img class="filterButtons" id="red" src="/assets/img/R.PNG">
+                            <img class="filterButtons" id="green" src="/assets/img/G.PNG">
+                            <img class="filterButtons" id="multicolor" src="/assets/img/M.svg">
+                            <img class="filterButtons" id="colorless" src="/assets/img/C.svg">
                         </form>
                     </div>
 
               </div>
             
-              <div class="row">
+              <div class="row middleRow">
                     <div class="col-lg-9 text-center availableCardsContainer" class="task">
                         <div class="row">
                           {{#each card_data}}
@@ -36,7 +43,7 @@
 					            </div>
                                 </div>
                             </div>
-                          {{/each}}
+                          {{/each}}}
                         </div>
                     </div>
                     <div class="text-center deckContainer" class="task">
