--- a/test/demo/P2-Index/styles.css
+++ b/test/demo/P2-Index/styles.css
@@ -115,6 +115,48 @@ body {
 
 /* TITLE */
 
+/* CARDS */
+
+.availableCards {
+    margin: auto;
+}
+
+.card {
+    overflow: hidden;
+    width: 180px;
+    height: 251px;
+    transition-property: filter;
+    filter: saturate(.7);
+    display: inline-block;
+    cursor: pointer;
+    background-color: #00000000;
+    border: none;
+    border-radius: 5%;
+    outline: none;
+    transition: 0.3s;
+    
+}
+
+.card>img {
+    border-radius: 5%;
+}
+
+.cardImg {
+    height: 251px !important;
+    max-width: 100%;
+}
+
+.card:hover {
+    filter: saturate(1.7);
+    webkit-box-shadow: 0px 18px 16px -6px black;
+    -moz-box-shadow: 0px 18px 16px -6px black;
+    box-shadow: 0 0 5px #ffae00ce, 0px 18px 16px -6px black;
+    transform: translateY(-10px);
+    
+}
+
+/* CARDS */
+
 /* Searchbar */
 
 .cardSearch {
@@ -228,6 +270,12 @@ body {
     box-shadow:         inset 0 0 10px #a3a3a342, 0 0 10px #000000, 0px 14px 16px -6px black;
 }
 
+#all:hover {
+    -moz-box-shadow:    0px 14px 16px -6px black;
+    -webkit-box-shadow: 0px 14px 16px -6px black;
+    box-shadow:         inset 0 0 10px #a3a3a342, 0 0 10px #ffa600, 0px 14px 16px -6px black;
+}
+
 
 /* Searchbar */
 
@@ -300,17 +348,22 @@ body {
 }
 
 .deckedCards {
-
+    border-bottom: 1px solid #00000063;
     margin: 0;
+    margin-top: 5%;
     display: flex;
-    padding-left: 4%;
+    padding-left: 0%;
     padding-right: 0;
+    border-radius: 5px;
+    transition: 0.3s;
 }
+
 
 .deckThumb {
     max-width: 100%;
     width: 30px;
     height: 30px;
+    border-radius: 5px;
 }
 
 .deckList {
@@ -326,6 +379,7 @@ body {
 
 .deckedCards:hover {
     cursor: pointer;
+    background-color: #ffa60070;
 }
 
 .deckedCards>.hoverimage {
@@ -343,56 +397,12 @@ body {
     float: right;
     position: absolute;
     border-radius: 5%;
-    z-index: 1;
-    transition: 0.2s;
+    z-index: 0;
     box-shadow: 0 0 5px #ffffff83;
+    transition: 0.05s;
 }
 
 /* DECKED CARDS */
-
-/* CARDS */
-
-.availableCards {
-    margin: auto;
-}
-
-.card {
-    overflow: hidden;
-    width: 180px;
-    height: 251px;
-    transition-property: filter;
-    filter: saturate(.7);
-    display: inline-block;
-    cursor: pointer;
-    background-color: #00000000;
-    border: none;
-    border-radius: 5%;
-    outline: none;
-    transition: 0.3s;
-    
-}
-
-.card>img {
-    border-radius: 5%;
-}
-
-.cardImg {
-    height: 251px !important;
-    max-width: 100%;
-}
-
-.card:hover {
-    filter: saturate(1.7);
-    webkit-box-shadow: 0px 18px 16px -6px black;
-    -moz-box-shadow: 0px 18px 16px -6px black;
-    box-shadow: 0 0 5px #ffae00ce, 0px 18px 16px -6px black;
-    transform: translateY(-10px);
-    
-}
-
-
-/* CARDS */
-
 
 /* RESPONSIVENESS */
 
