--- a/test/demo/P2-Index/styles.css
+++ b/test/demo/P2-Index/styles.css
@@ -373,13 +373,13 @@ body {
     color: #0000009d;
     font-size: 16px;
     width: 200px;
-    overflow-x: hidden;
-    text-overflow: ellipsis;
 }
 
 .deckedCards:hover {
     cursor: pointer;
-    background-color: #ffa60070;
+    background-color: #ffa60071;
+    box-shadow: 0 0 8px #ffa60094;
+    text-shadow: 0 0 8px #0000006b;
 }
 
 .deckedCards>.hoverimage {
