--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,17 +17,18 @@
             
               <div class = "row">
                     <div class="col-lg-11 text-center search_cards">
-                        <form action="" method="GET">
+                        <form class="searchContainer">
                             <input type="text" class="form-control cardSearch" name="card_search" placeholder="Type the name of a card..." id="search_cards">
-                            <button type="submit" title="Reset Search" class="btn btn-default searchButton">Clear</button>
-                            <img class="filterButtons" title="White" id="white" src="W.PNG">
-                            <img class="filterButtons" title="Blue" id="blue" src="U.PNG">
-                            <img class="filterButtons" title="Black" id="black" src="B.PNG">
-                            <img class="filterButtons" title="Red" id="red" src="R.PNG">
-                            <img class="filterButtons" title="Green" id="green" src="G.PNG">
-                            <img class="filterButtons" title="Multicolor" id="multicolor" src="M.svg">
-                            <img class="filterButtons" title="Colorless" id="colorless" src="C.svg">
-                            <img class="filterButtons" title="All Cards" id="all" src="mtg.png">
+                            <!-- <button type="submit" title="Reset Search" class="btn btn-default searchButton" id="all">Clear</button> -->
+                            <div title="Reset Search" class="searchButton clearB" id="all">Clear</div>
+                            <img class="filterButtons" title="White" id="white" src="/assets/img/W.PNG">
+                            <img class="filterButtons" title="Blue" id="blue" src="/assets/img/U.PNG">
+                            <img class="filterButtons" title="Black" id="black" src="/assets/img/B.PNG">
+                            <img class="filterButtons" title="Red" id="red" src="/assets/img/R.PNG">
+                            <img class="filterButtons" title="Green" id="green" src="/assets/img/G.PNG">
+                            <img class="filterButtons" title="Multicolor" id="multicolor" src="/assets/img/M.svg">
+                            <img class="filterButtons" title="Colorless" id="colorless" src="/assets/img/C.svg">
+                            <img class="filterButtons" title="All Cards" id="all" src="/assets/img/mtg.png">
                         </form>
                     </div>
 
