--- a/test/demo/P2-Index/styles.css
+++ b/test/demo/P2-Index/styles.css
@@ -243,7 +243,7 @@ body {
     -webkit-box-shadow: 0px 14px 16px -6px black;
     box-shadow:         inset 0 0 10px #a3a3a342, 0 0 10px #ffffff, 0px 14px 16px -6px black;
     filter: saturate(2);
-    transform: rotate(5deg);
+    transform: translateY(-1px);
 }
 
 #green:hover {
@@ -335,6 +335,7 @@ body {
     margin: auto;
     margin-left: 0;
     overflow-y: scroll;
+    overflow-x: hidden;
     height: 600px;
     padding-top: 2%;
     padding-right: 1%;
