--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,13 +2,14 @@
 <html>
 
 <head>
-  <title>Tome of Legends</title>
+	<title>Tome of Legends</title>
 	<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <link rel="stylesheet" href="styles/styles.css"/>
+  <script src="/assets/js/jquery.lazyload.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="styles.css"/>
   <link href="https://fonts.googleapis.com/css?family=Baloo|Indie+Flower|Francois+One|Raleway|Molengo|Manjari|Monoton|Righteous|Rubik+Mono+One|Staatliches&display=swap" rel="stylesheet">
   <link rel="icon" href="">
 </head>
