--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,8 +8,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="/assets/js/jquery.lazyload.js" type="text/javascript"></script>
-  <link rel="stylesheet" href="styles.css"/>
+  <script src="/js/jquery.lazyload.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="/styles/styles.css"/>
   <link href="https://fonts.googleapis.com/css?family=Baloo|Indie+Flower|Francois+One|Raleway|Molengo|Manjari|Monoton|Righteous|Rubik+Mono+One|Staatliches&display=swap" rel="stylesheet">
   <link rel="icon" href="">
 </head>
