--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,11 +21,11 @@
                             <input type="text" class="form-control cardSearch" name="card_search" placeholder="Type the name of a card..." id="search_cards">
                             <!-- <button type="submit" title="Reset Search" class="btn btn-default searchButton" id="all">Clear</button> -->
                             <div title="Reset Search" class="searchButton clearB" id="all">Clear</div>
-                            <img class="filterButtons" title="White" id="white" src="/assets/img/W.PNG">
-                            <img class="filterButtons" title="Blue" id="blue" src="/assets/img/U.PNG">
-                            <img class="filterButtons" title="Black" id="black" src="/assets/img/B.PNG">
-                            <img class="filterButtons" title="Red" id="red" src="/assets/img/R.PNG">
-                            <img class="filterButtons" title="Green" id="green" src="/assets/img/G.PNG">
+                            <img class="filterButtons" title="White" id="W" src="/assets/img/W.PNG">
+                            <img class="filterButtons" title="Blue" id="U" src="/assets/img/U.PNG">
+                            <img class="filterButtons" title="Black" id="B" src="/assets/img/B.PNG">
+                            <img class="filterButtons" title="Red" id="R" src="/assets/img/R.PNG">
+                            <img class="filterButtons" title="Green" id="G" src="/assets/img/G.PNG">
                             <img class="filterButtons" title="Multicolor" id="multicolor" src="/assets/img/M.svg">
                             <img class="filterButtons" title="Colorless" id="colorless" src="/assets/img/C.svg">
                             <img class="filterButtons" title="All Cards" id="all" src="/assets/img/mtg.png">
@@ -36,12 +36,14 @@
             
               <div class="row middleRow">
                     <div class="col-lg-9 text-center availableCardsContainer" class="task">
-                        <div class="row">
+                        <div class="row cardsHolder">
                           {{#each card_data}}
-                            <div class="availableCards addDeck {{#each this.Colors}}{{this.name}}{{/each}} {{this.name}}">
-                                <div class="card" data-id="{{this.id}}">
-						            <img class="lazy cardImg" data-original="{{this.imageURLNormal}}" width="180px" height="251px"> {{!Will update names, etc. Placeholders for now.}}
-					            </div>
+                            <div class="availableCards colorid{{this.colorString}} {{this.name}}">
+                                <div class="floater">
+                                    <div class="card addDeck" id="{{this.colorString}}">
+						                <img class="lazy cardImg" data-original="{{this.imageURLNormal}}" data-id="{{this.id}}" data-name="{{this.name}}" width="180px" height="251px">
+					                </div>
+                                </div>
                             </div>
                           {{/each}}
                         </div>
@@ -64,5 +66,4 @@
                 </div>
             </div>
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="/js/index.js"></script>
+            <script src="/js/index.js" type="text/javascript"></script>
