--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,13 +16,13 @@
               </div>
 
                 <div class="saveDeck">
+                    <a data-fancybox data-src="#deckAlert" href="javascript:;">
                     <div class="saveButton">Export Deck</div>
+                    </a>
                 </div>
 
                 <div style="display: none;" id="deckAlert">
                     <h id="deckAlertText"></h>
-                    <br>
-                    <img id="matchPicture" src="">
                 </div>
             
               <div class = "row">
@@ -31,11 +31,11 @@
                             <input type="text" class="form-control cardSearch" name="card_search" placeholder="Type the name of a card..." id="search_cards">
                             <!-- <button type="submit" title="Reset Search" class="btn btn-default searchButton" id="all">Clear</button> -->
                             <div title="Reset Search" class="searchButton clearB" id="all">Clear</div>
-                            <img class="filterButtons" title="White" id="W" src="/assets/img/W.PNG">
-                            <img class="filterButtons" title="Blue" id="U" src="/assets/img/U.PNG">
-                            <img class="filterButtons" title="Black" id="B" src="/assets/img/B.PNG">
-                            <img class="filterButtons" title="Red" id="R" src="/assets/img/R.PNG">
-                            <img class="filterButtons" title="Green" id="G" src="/assets/img/G.PNG">
+                            <img class="filterButtons" title="White" id="W" src="/assets/img/W.png">
+                            <img class="filterButtons" title="Blue" id="U" src="/assets/img/U.png">
+                            <img class="filterButtons" title="Black" id="B" src="/assets/img/B.png">
+                            <img class="filterButtons" title="Red" id="R" src="/assets/img/R.png">
+                            <img class="filterButtons" title="Green" id="G" src="/assets/img/G.png">
                             <img class="filterButtons" title="Multicolor" id="multicolor" src="/assets/img/M.svg">
                             <img class="filterButtons" title="Colorless" id="colorless" src="/assets/img/C.svg">
                             <img class="filterButtons" title="All Cards" id="all" src="/assets/img/mtg.png">
