--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,8 +21,16 @@
                     </a>
                 </div>
 
-                <div style="display: none;" id="deckAlert">
-                    <h id="deckAlertText"></h>
+                <div style="display: none;" id="deckAlert" class="text-center">
+                    <h3 id="alertTitle">Deck Saved! Your deck can be accessed via the URL below.</h3>
+                    <a id="deckURL"></a>
+                </div>
+
+                <div class="side">
+                    <a href="javascript:void(0)" class="closebtn">&times;</a>
+                        {{#each deck}}
+                        <div class="savedDecksButtons">{{this.id}}</div>
+                        {{/each}}
                 </div>
             
               <div class = "row">
@@ -64,8 +72,8 @@
                               {{#if deck}}
                                 {{#each deck.Cards}}
                                 <div class="col-lg-12 text-center deckedCards"> 
-                                    <img class="deckThumb" src="{{this.imageURLSmall}}">
-                                    <p class="deckList" onmouseover="hovered()" onmouseout="unhovered()">{{this.name}}>
+                                    <img class="deckThumb" src="{{this.imageURLSmall}}" onerror="this.onerror=null;this.src='/assets/img/default.jpg';">
+                                    <p class="deckList" onmouseover="hovered()" onmouseout="unhovered()" data-id="{{this.id}}">{{this.name}}</p>
                                     <img class="hoverimage" src="{{this.imageURLNormal}}">    
                                 </div>
                                 {{/each}}
