--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -50,7 +50,7 @@ body {
 
 #deckURL {
     text-shadow: 10px 10px 3px black;
-    font-size: 2vw;
+    font-size: 20px;
     color: #ff9100;
     transition: 0.2s;
 }
