--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
   <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Baloo|Indie+Flower|Francois+One|Raleway|Molengo|Manjari|Monoton|Righteous|Rubik+Mono+One|Staatliches&display=swap" rel="stylesheet">
-  <link rel="icon" href="">
+  <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
