--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -82,6 +82,7 @@
                     </div>
                 </div>
             </div>
-
+        
+            <script src="/js/jquery.visible.js"></script>
             <script src="/js/clusterize.js"></script>
             <script src="/js/index.js" type="text/javascript"></script>
