--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -356,7 +356,7 @@ body {
     display: inline-block;
     overflow-y: scroll;
     width: 915px;
-    height: 100%;
+    height: 600px;
     max-height: 600px;
     margin: auto;
     margin-right: 0.5%;
