added saved decks

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -28,9 +28,9 @@
 
                 <div class="side">
                     <a href="javascript:void(0)" class="closebtn">&times;</a>
-                        {{#each deck}}
+                        {{!-- {{#each deck}}
                         <div class="savedDecksButtons">{{this.id}}</div>
-                        {{/each}}
+                        {{/each}} --}}
                 </div>
             
               <div class = "row">
