--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,7 +8,9 @@
                         </div>
                     </div>
                     <div class="col-md-1 text-center" id="login">
-                        <div class="loginButton">Login</div> <!-- {{!Placeholder}} -->
+                        <a href="https://github.com/rizho123/project-2">
+                        <div class="loginButton">GitHub Repo</div> <!-- {{!Placeholder}} -->
+                        </a>
                     </div>
                     <div class = "col-md-1 text-center allDecks">
                       <div class="deckButton">Your Decks</div>
