--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,8 +8,8 @@
                         </div>
                     </div>
                     <div class="col-md-1 text-center" id="login">
-                        <a href="https://github.com/rizho123/project-2">
-                        <div class="loginButton">GitHub Repo</div> <!-- {{!Placeholder}} -->
+                        <a href="https://github.com/rizho123/project-2" target="_blank">
+                        <div class="loginButton">GitHub</div> <!-- {{!Placeholder}} -->
                         </a>
                     </div>
                     <div class = "col-md-1 text-center allDecks">
