--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -56,7 +56,7 @@
             
               <div class="row middleRow">
                   <div id="loading">
-                    <img id="loading-image" src="images/ajax-loader.gif" alt="Loading..." />
+                    <img id="loading-image" src="/assets/img/loader.gif" alt="Loading..." />
                   </div>
                     <div id="scrollArea" class="col-lg-9 clusterize-scroll text-center availableCardsContainer" class="task">
                         <div id="contentArea" class="row clusterize-content cardsHolder">
