--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,6 +19,11 @@
 
 <body>
   {{{body}}}
+  <script>
+    $(window).load(function() {
+      $('#loading').hide();
+    });
+  </script>
 </body>
 
 </html>
